include/librealsense2/rs_advanced_mode.h

/* Enable/Disable Advanced-Mode */
void rs2_toggle_advanced_mode(rs2_device* dev, int enable, rs2_error** error);
/* Check if Advanced-Mode is enabled */
void rs2_is_enabled(rs2_device* dev, int* enabled, rs2_error** error);
/* Sets new values for Depth Control Group, returns 0 if success */
void rs2_set_depth_control(rs2_device* dev, STDepthControlGroup* group, rs2_error** error);
/* Gets new values for Depth Control Group, returns 0 if success */
void rs2_get_depth_control(rs2_device* dev, STDepthControlGroup* group, int mode, rs2_error** error);
/* Sets new values for RSM Group, returns 0 if success */
void rs2_set_rsm(rs2_device* dev, STRsm* group, rs2_error** error);
/* Gets new values for RSM Group, returns 0 if success */
void rs2_get_rsm(rs2_device* dev, STRsm* group, int mode, rs2_error** error);
/* Sets new values for STRauSupportVectorControl, returns 0 if success */
void rs2_set_rau_support_vector_control(rs2_device* dev, STRauSupportVectorControl* group, rs2_error** error);
/* Gets new values for STRauSupportVectorControl, returns 0 if success */
void rs2_get_rau_support_vector_control(rs2_device* dev, STRauSupportVectorControl* group, int mode, rs2_error** error);
/* Sets new values for STColorControl, returns 0 if success */
void rs2_set_color_control(rs2_device* dev, STColorControl* group, rs2_error** error);
/* Gets new values for STColorControl, returns 0 if success */
void rs2_get_color_control(rs2_device* dev, STColorControl* group, int mode, rs2_error** error);
/* Sets new values for STRauColorThresholdsControl, returns 0 if success */
void rs2_set_rau_thresholds_control(rs2_device* dev, STRauColorThresholdsControl* group, rs2_error** error);
/* Gets new values for STRauColorThresholdsControl, returns 0 if success */
void rs2_get_rau_thresholds_control(rs2_device* dev, STRauColorThresholdsControl* group, int mode, rs2_error** error);
/* Sets new values for STSloColorThresholdsControl, returns 0 if success */
void rs2_set_slo_color_thresholds_control(rs2_device* dev, STSloColorThresholdsControl* group, rs2_error** error);